--- a/desktop.ini
+++ b/desktop.ini
@@ -1,6 +1,2 @@
 [.ShellClassInfo]
-IconResource=C:\Users\willo\OneDrive\Desktop\mars_quest\marsquest.ico,0
-[ViewState]
-Mode=
-Vid=
-FolderType=StorageProviderGeneric
+IconResource=marsquest.ico,0
